--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
-  "dependencies": {
+  "name": "desenvolvimento-avancado-com-javascript-es6",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Joshaby/Desenvolvimento-avancado-com-JavaScript-ES6.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Joshaby/Desenvolvimento-avancado-com-JavaScript-ES6/issues"
+  },
+  "homepage": "https://github.com/Joshaby/Desenvolvimento-avancado-com-JavaScript-ES6#readme",
+  "devDependencies": {
+    "mocha": "^9.1.3",
     "node-fetch": "^3.0.0"
   }
 }
