--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Joshaby/Desenvolvimento-avancado-com-JavaScript-ES6#readme",
   "devDependencies": {
+    "chai": "^4.3.4",
     "mocha": "^9.1.3",
     "node-fetch": "^3.0.0"
   }
