--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
-    "node-fetch": "^3.0.0"
+    "node-fetch": "^3.0.0",
+    "sinon": "^11.1.2"
   }
 }
